--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "dependencies": {
     "@automapper/classes": "^8.7.7",
     "@automapper/core": "^8.7.7",
-    "@automapper/nestjs": "^8.7.7",
     "@automapper/types": "^6.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.7",
+    "@timonmasberg/automapper-nestjs": "^0.0.0",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.3.1",
     "mongoose": "^7.4.2",
