--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "ts-node -r tsconfig-paths/register ./src/seeder.ts",
+    "seed:refresh": "ts-node -r tsconfig-paths/register ./src/seeder.ts --refresh"
   },
   "dependencies": {
     "@automapper/classes": "^8.7.7",
@@ -31,12 +33,15 @@
     "class-transformer": "^0.5.1",
     "dotenv": "^16.3.1",
     "mongoose": "^7.4.2",
+    "nestjs-command": "^3.1.4",
     "nestjs-zod": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "yargs": "^17.7.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@nestjs/cli": "^10.0.1",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.0",
@@ -47,12 +52,14 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "nestjs-seeder": "^0.3.2",
     "prettier": "^2.8.8",
     "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
