🔧 chore(.eslintrc.js): add 'migrate.ts' and 'migrations/**/*' to ignorePatterns to prevent linting of migration files 📝 docs(README.md): update README to reflect changes in project setup and usage 🎉 feat(migrate.ts): add migration setup file to handle database migrations 🎉 feat(migrations): add first migration demo file for user creation 🔧 chore(package.json): add 'ts-migrate-mongoose' package for handling migrations 🔧 chore(user.schema.ts): update User schema to explicitly define property types for better type safety The changes were made to introduce database migrations to the project, which will help in managing changes to the database schema. The README was updated to reflect these changes and provide instructions on how to run migrations. The User schema was updated to explicitly define property types for better type safety. The 'ts-migrate-mongoose' package was added to handle migrations. The 'migrate.ts' and 'migrations/**/*' files were added to ESLint ignore patterns to prevent linting of migration files.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nestjs-zod": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "ts-migrate-mongoose": "^3.3.0",
     "yargs": "^17.7.2",
     "zod": "^3.21.4"
   },
