--- a/.github/workflows/master_tired-potato.yml
+++ b/.github/workflows/master_tired-potato.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - tired-potato
 
 on:
@@ -25,12 +22,13 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+          zip -r node-app.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: node-app.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,4 +50,4 @@ jobs:
           app-name: 'tired-potato'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_99618F12DB6B4946919E73C91652D3F6 }}
-          package: .
+          package: node-app.zip
