🔧 refactor(master_tired-potato.yml): rename zip file from node-app.zip to nest.zip for better clarity ➕ feat(master_tired-potato.yml): add step to delete zip file after deployment to clean up workspace
The zip file was renamed from node-app.zip to nest.zip to better reflect the contents of the file, which is a NestJS application. This change improves clarity and understanding of the file's purpose. Additionally, a new step was added to delete the zip file after deployment. This is to ensure that the workspace remains clean and uncluttered after the deployment process.

--- a/.github/workflows/master_tired-potato.yml
+++ b/.github/workflows/master_tired-potato.yml
@@ -22,13 +22,15 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          zip -r node-app.zip .
+
+      - name: Zip all files for upload between jobs
+        run: zip --symlinks -r nest.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: node-app.zip
+          path: nest.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +52,8 @@ jobs:
           app-name: 'tired-potato'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_99618F12DB6B4946919E73C91652D3F6 }}
-          package: node-app.zip
+          package: nest.zip
+
+      - name: Delete zip file
+        run: rm nest.zip
+
