--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"],
+  "compilerOptions": {
+    "sourceMap": true,
+    "declaration": false,
+    "inlineSources": true,
+    "sourceRoot": "/"
+  }
 }
