--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@timonmasberg/automapper-nestjs": "^0.0.0",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.3.1",
+    "faker": "^6.6.6",
     "mongoose": "^7.4.2",
     "nestjs-zod": "^2.3.3",
     "reflect-metadata": "^0.1.13",
