--- a/.github/workflows/master_tired-potato.yml
+++ b/.github/workflows/master_tired-potato.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - tired-potato
 
 on:
@@ -22,15 +25,13 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-
-      - name: Zip all files for upload between jobs
-        run: zip --symlinks -r nest.zip ./*
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: nest.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,9 +52,5 @@ jobs:
         with:
           app-name: 'tired-potato'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_99618F12DB6B4946919E73C91652D3F6 }}
-          package: nest.zip
-
-      - name: Delete zip file
-        run: rm nest.zip
-
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0ED5EC7B4AA947BF97D948B71EE4E727 }}
+          package: .
