--- a/.github/workflows/master_tired-potato.yml
+++ b/.github/workflows/master_tired-potato.yml
@@ -25,13 +25,16 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+
+      - name: Zip all files for upload between jobs
+        run: |
+           zip --symlinks -r nest.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: nest.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +56,4 @@ jobs:
           app-name: 'tired-potato'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0ED5EC7B4AA947BF97D948B71EE4E727 }}
-          package: .
+          package: nest.zip
